[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["poteboy"]
description = "A collection of CSS tools written in Rust"
edition = "2018"
license     = "MIT"
repository = "https://github.com/poteboy/emox"

[workspace.dependencies]
# workspace crates
emox_parser = { path = "crates/parser" }
emox_wasm = { path = "crates/wasm" }

# external crates
wasm-bindgen = "0.2.84"
lazy_static = "1.4.0"
regex = "1.10.5"
serde = "1.0.198"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.116"
web-sys = {"version" = "0.3.44", features=['console']}
tsify = "0.4.5"

[profile.release]
opt-level     = 3
lto           = "fat"