[package]
name = "emox_parser"
version = "0.0.1"
publish = false
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lazy_static =  { workspace = true }
regex =  { workspace = true }
serde = { workspace = true, features = ["derive"] }